test/corpus/project_structure.txt
================
Happy Path Test
================
# Test Root Project |>2341282
+ Test Root Comment |>2381432
& Test Section |>1238912
## Test Child Project |>123291
+ Test Child Comment |>1298342
### Test Grandchild Project |>87529
+ Test Grandchild Comment |>3485162
#### Test Great Grandchild Projec |>23861
+ Test Great Grandchild |>4329471
##### Test Leaf Project Comment |>348712340
+ Test Leaf multiline comment |>324719234
@1
---
(source_file
 (root_project
  (root_project_icon)
  (text_line)
  (id
   (id_number))
  (comment
   (comment_icon)
   (text_line)
   (id
    (id_number)))
  (section
   (section_icon)
   (text_line)
   (id
    (id_number)))
  (child_project
   (child_project_icon)
   (text_line)
   (id
    (id_number))
   (comment
    (comment_icon)
    (text_line)
    (id
     (id_number)))
   (grandchild_project
    (grandchild_project_icon)
    (text_line)
    (id
     (id_number))
    (comment
     (comment_icon)
     (text_line)
     (id
      (id_number)))
    (great_grandchild_project
     (great_grandchild_project_icon)
     (text_line)
     (id
      (id_number))
     (comment
      (comment_icon)
      (text_line)
      (id
       (id_number)))
     (leaf_project
      (leaf_project_icon)
      (text_line)
      (id
       (id_number))
      (comment
       (comment_icon)
       (text_line)
       (id
        (id_number))))))))
(sync_token
  (text_line)))
================
Forward Slash
================
# Test Project |>1238294
## Test child/project |>231
@2
---
(source_file
 (root_project
  (root_project_icon)
  (text_line)
  (id
   (id_number))
  (child_project
   (child_project_icon)
   (text_line)
   (id
    (id_number))))
(sync_token
	(text_line)))
================
Double Child
================
# Project |>1
## Child 1 |>2
## Child 2 |>3
@3
---
(source_file
 (root_project
  (root_project_icon)
  (text_line)
  (id
   (id_number))
  (child_project
   (child_project_icon)
   (text_line)
   (id
    (id_number)))
  (child_project
   (child_project_icon)
   (text_line)
   (id
    (id_number))))
(sync_token
	(text_line)))
============
URL Example
============
# URL Project |>1
+ before URL [https://www.google.com](Google) after URL|>2
@3
---
(source_file
  (root_project
    (root_project_icon)
    (text_line)
    (id
      (id_number))
    (comment
      (comment_icon)
      (text_line)
      (url)
      (text_line)
      (id
        (id_number))))
  (sync_token
    (text_line)))
